# CG

./: CMakeLists.txt
modules/ball_vector/: CMakeLists.txt  main.cpp
modules/lab1/: CMakeLists.txt  main.cpp
modules/lab2/: CMakeLists.txt  main.cpp
